@@ -149,10 +149,6 @@
     if([delegate conformsToProtocol: @protocol(PTYTabViewDelegateProtocol)])
 		[delegate tabView: self willAddTabViewItem: aTabViewItem];
     
-    // add the item
-    maxLabelSize=(([self tabViewType]==NSLeftTabsBezelBorder||[self tabViewType]==NSRightTabsBezelBorder)?[self frame].size.height-20:[self frame].size.width-20)/([self numberOfTabViewItems]+1)-17;
-    if (maxLabelSize<20) 
-        maxLabelSize=20;
     
     [super addTabViewItem: aTabViewItem];
     [lock unlock];
@@ -172,9 +168,6 @@
 		[delegate tabView: self willRemoveTabViewItem: aTabViewItem];
     
     // remove the item
-    maxLabelSize=(([self tabViewType]==NSLeftTabsBezelBorder||[self tabViewType]==NSRightTabsBezelBorder)?[self frame].size.height-20:[self frame].size.width-20)/([self numberOfTabViewItems]-1)-17;
-    if (maxLabelSize<20) 
-        maxLabelSize=20;
     
     [super removeTabViewItem: aTabViewItem];
     [lock unlock];
@@ -200,11 +193,6 @@
     if([delegate conformsToProtocol: @protocol(PTYTabViewDelegateProtocol)])
         [delegate tabView: self willInsertTabViewItem: tabViewItem atIndex: index];    
 
-    // insert the item
-    maxLabelSize=(([self tabViewType]==NSLeftTabsBezelBorder||[self tabViewType]==NSRightTabsBezelBorder)?[self frame].size.height-20:[self frame].size.width-20)/([self numberOfTabViewItems]+1)-17;
-    if (maxLabelSize<20) 
-        maxLabelSize=20;
-    
     [super insertTabViewItem: tabViewItem atIndex: index];
     [lock unlock];
 #if DEBUG_METHOD_TRACE
@@ -212,10 +200,5 @@
 #endif
 }
 
-
-- (float) maxLabelSize
-{
-    return maxLabelSize;
-}
 
 @end
